--- a/main.mustache
+++ b/main.mustache
@@ -31,6 +31,28 @@
   <img alt="Nodejs" src="https://img.shields.io/badge/-Nodejs-43853d?style=flat-square&logo=Node.js&logoColor=white" />
 </p>
 
+<br/>
+
+## **GitHub Stats**
+
+<a href="https://github.com/dumildematos">
+  <img align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=dumildematos&theme=dracula&hide_langs_below=1" />
+</a>
+
+<a href="https://github.com/dumildematos">
+ <img align="center" src="https://github-readme-stats.vercel.app/api?username=dumildematos&show_icons=true&theme=dracula&line_height=27" alt="**SEU NOME** github stats"/>
+</a>
+
+  <p align="center" style="background: red; width: 100%;">
+    
+  [![Readme Card](https://github-readme-streak-stats.herokuapp.com/?user=dumildematos&theme=nightowl)](https://github.com/pengtaoa) 
+  </p>
+
+<br/>
+
+
+**My Contribution Status (Snake Game)**
+![GitHub Snake dark](https://github.com/Nurul-GC/Nurul-GC/blob/output/github-snake-dark.svg)
 
 
 
