--- a/main.mustache
+++ b/main.mustache
@@ -1,5 +1,7 @@
-<h1><img src="https://emojis.slackmojis.com/emojis/images/1531849430/4246/blob-sunglasses.gif?1531849430" width="30"/> Hey! Nice to see you.</h1>
-
+<p align="center">
+  <a href="https://github.com/dumildematos">
+    <img src="https://user-images.githubusercontent.com/20955511/199138068-0a7b7b75-a024-4f00-803f-30a19c5d1b2d.png" alt="Dumilde Matos" /></a>
+</p>
 <p align="center">
   <!-- Typing SVG by dumildematos - https://github.com/dumildematos/readme-typing-svg -->
   <a href="https://github.com/dumildematos/readme-typing-svg">
