--- a/main.mustache
+++ b/main.mustache
@@ -1,5 +1,5 @@
 <p align="center">
-  <h1>Dumilde Matos</h1>
+  <h1 align="center">Dumilde Matos</h1>
 </p>
 <p align="center">
   <!-- Typing SVG by dumildematos - https://github.com/dumildematos/readme-typing-svg -->
