add latest blog

--- a/main.mustache
+++ b/main.mustache
@@ -55,6 +55,14 @@
 
 <br/>
 
+### 📔 Latest Blog posts
+
+<!-- BLOG-POST-LIST:START -->
+- [What you should know about Angular](https://dumildematos.medium.com/what-you-should-know-about-angular-75cd74786fd7)
+- [O que é um serviço no Angular e porquê usá-lo?](https://dumildematos.medium.com/o-que-%C3%A9-um-servi%C3%A7o-no-angular-e-por-que-us%C3%A1-lo-2c8b441618cf)
+- [O que é Gitflow Workflow e porquê usar ?](https://dumildematos.medium.com/o-que-%C3%A9-gitflow-workflow-e-porqu%C3%AA-usar-b45871d6412e)
+<!-- BLOG-POST-LIST:END -->
+
 
 **My Contribution Status (Snake Game)**
 ![GitHub Snake dark](https://github.com/Nurul-GC/Nurul-GC/blob/output/github-snake-dark.svg)
