--- a/main.mustache
+++ b/main.mustache
@@ -4,7 +4,7 @@
 <p align="center">
   <!-- Typing SVG by dumildematos - https://github.com/dumildematos/readme-typing-svg -->
   <a href="https://github.com/dumildematos/readme-typing-svg">
-    <img src="https://readme-typing-svg.demolab.com/?lines=Full-stack%20web%20and%20app%20developer;Experienced%20UI%2FUX%20Designer;10%2B%20years%20of%20coding%20experience;Always%20learning%20new%20things&font=Fira%20Code&center=true&width=440&height=45&color=f75c7e&vCenter=true&pause=1000&size=22" /></a>
+    <img src="https://readme-typing-svg.demolab.com/?lines=Full-stack%20web%20and%20app%20developer;Experienced%20UI%2FUX%20Designer;10%2B%20years%20of%20coding%20experience;Always%20learning%20new%20things&font=Fira%20Code&center=true&width=440&height=45&color=2ecc71&vCenter=true&pause=1000&size=22" /></a>
 </p>
 
 <h3>Things I code with</h3>
@@ -40,20 +40,12 @@
 
 ## **GitHub Stats**
 
-<a href="https://github.com/dumildematos">
-  <img align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=dumildematos&theme=dracula&hide_langs_below=1" />
-</a>
-
-<a href="https://github.com/dumildematos">
- <img align="center" src="https://github-readme-stats.vercel.app/api?username=dumildematos&show_icons=true&theme=dracula&line_height=27" alt="**SEU NOME** github stats"/>
-</a>
-
-  <p align="center" style="background: red; width: 100%;">
-    
-  [![Readme Card](https://github-readme-streak-stats.herokuapp.com/?user=dumildematos&theme=nightowl)](https://github.com/pengtaoa) 
-  </p>
-
-<br/>
+<p align="center">
+<br>
+    <!-- Activity Widget -->
+    <img alt="Dumilde Matos's GitHub Stats"
+            src="https://github-readme-stats.vercel.app/api?username=dumildematos&show_icons=true&theme=radical" />
+</p>
 
 ### 📔 Latest Blog posts
 
@@ -66,8 +58,6 @@
 
 **My Contribution Status (Snake Game)**
 ![GitHub Snake dark](https://github.com/Nurul-GC/Nurul-GC/blob/output/github-snake-dark.svg)
-
-
 
 
 <h3>Where to find me</h3>
