--- a/main.mustache
+++ b/main.mustache
@@ -35,6 +35,8 @@
   <img alt="MongoDB" src="https://img.shields.io/badge/-MongoDB-13aa52?style=flat-square&logo=mongodb&logoColor=white" />
   <img alt="Nodejs" src="https://img.shields.io/badge/-Nodejs-43853d?style=flat-square&logo=Node.js&logoColor=white" />
   <img alt="Arduino" src="https://img.shields.io/badge/-Arduino-00979D?style=flat-square&logo=Arduino&logoColor=white">
+  <img alt="Unity" src="https://img.shields.io/badge/-Unity-222f3e?style=flat-square&logo=Unity&logoColor=white"/>
+  <img alt="Python" src="https://img.shields.io/badge/-Python-ffa801?style=flat-square&logo=Python&logoColor=white" />
 </p>
 
 <br/>
