--- a/main.mustache
+++ b/main.mustache
@@ -1,10 +1,7 @@
 <h2>
-  {{#username}}
-  Hi {{username}}! Welcome to my GitHub page.
-  {{/username}}
-  {{^username}}
-  Hi anonymous user! Welcome to my GitHub page.
-  {{/username}}
+ 
+  {{greeting}}
+
 </h2>
 
 <p align="center">
