update opensource repos ibfo

--- a/main.mustache
+++ b/main.mustache
@@ -50,6 +50,12 @@
             src="https://github-readme-stats.vercel.app/api?username=dumildematos&show_icons=true&theme=radical" />
 </p>
 
+<h2 align="center">👨‍💻 Opensource Repositories 👨‍💻</h2>
+<br>
+<div width="100%" align="center">
+  <a align="left" href="https://github.com/dumildematos/penman" title="Penman"><img align="left" height="115" src="https://github-readme-stats.vercel.app/api/pin/?username=dumildematos&repo=penman&theme=react&border_color=61dafb&border_radius=10"></a>
+</div>
+
 ### 📔 Latest Medium posts
 <ul>
   {{#posts}}
