--- a/main.mustache
+++ b/main.mustache
@@ -42,20 +42,32 @@
 <br/>
 
 ## **GitHub Stats**
+<p align=center>
+  <div align=center>
+    <a href="https://github.com/denvercoder1/github-readme-streak-stats" title="Go to Source">
+      <img align="left" width=390 src="https://streak-stats.demolab.com/?user=dumildematos&theme=react&border=61dafb&hide_border=true" alt="dumildematos" />
+    </a>
+    <a href="https://github.com/anuraghazra/github-readme-stats" title="Go to Source">
+      <img align="right" width=390 src="https://github-readme-stats.vercel.app/api?username=dumildematos&show_icons=true&theme=react&border_color=61dafb&hide_border=true" />
+    </a>
+  </div>
+  <br><br><br><br><br><br><br><br><br>
+  <div align=center>
+    <a href="https://github.com/anuraghazra/github-readme-stats">
+      <img height=200 align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=dumildematos&hide=c%23,powershell,Mathematica,Ruby,Objective-C,Objective-C%2b%2b,Cuda&title_color=61dafb&text_color=ffffff&icon_color=61dafb&bg_color=20232a&langs_count=8&layout=compact&border_color=61dafb&hide_border=true&size_weight=0.5&count_weight=0.5" />
+    </a>
+  </div>
+  <br>
 
-<p align="center">
-<br>
-    <!-- Activity Widget -->
-    <img alt="Dumilde Matos's GitHub Stats"
-            src="https://github-readme-stats.vercel.app/api?username=dumildematos&show_icons=true&theme=radical" />
+  <img src="https://github-readme-activity-graph.vercel.app/graph?username=dumildematos&theme=react-dark&bg_color=20232a&hide_border=true" width="100%"/>
 </p>
-
+<br>
 <h2>👨‍💻 Opensource Repositories 👨‍💻</h2>
 <br>
 <div width="100%" align="center">
   <a align="left" href="https://github.com/dumildematos/penman" title="Penman"><img align="left" height="115" src="https://github-readme-stats.vercel.app/api/pin/?username=dumildematos&repo=penman&theme=react&border_color=61dafb&border_radius=10"></a>
 </div>
-<br>
+<br/><br/><br/><br/><br/><br/>
 ### 📔 Latest Medium posts
 <ul>
   {{#posts}}
