--- a/main.mustache
+++ b/main.mustache
@@ -3,8 +3,8 @@
 </p>
 <p align="center">
   <!-- Typing SVG by dumildematos - https://github.com/dumildematos/readme-typing-svg -->
-  <a href="https://github.com/dumildematos/readme-typing-svg">
-    <img src="https://readme-typing-svg.demolab.com/?lines=Full-stack%20web%20and%20app%20developer;Experienced%20UI%2FUX%20Designer;10%2B%20years%20of%20coding%20experience;Always%20learning%20new%20things&font=Fira%20Code&center=true&width=440&height=45&color=2ecc71&vCenter=true&pause=1000&size=22" /></a>
+  <a href="https://git.io/typing-svg">
+    <img src="https://readme-typing-svg.demolab.com/?lines=Full-stack%20web%20and%20app%20developer;Experienced%20UI%2FUX%20Designer;10%2B%20years%20of%20coding%20experience;Always%20learning%20new%20things&font=Fira%20Code&center=true&width=440&height=45&color=61dafb&vCenter=true&pause=1000&size=22" /></a>
 </p>
 
 <h3>Things I code with</h3>
