--- a/main.mustache
+++ b/main.mustache
@@ -64,7 +64,9 @@
 <br>
 <h2>👨‍💻 Opensource Repositories 👨‍💻</h2>
 <br>
-
+<div width="100%" align="center">
+  <a align="left" href="https://github.com/dumildematos/penman" title="Penman"><img align="left" height="115" src="https://github-readme-stats.vercel.app/api/pin/?username=dumildematos&repo=penman&theme=react&border_color=61dafb&border_radius=10"></a>
+</div>
 <br/><br/><br/><br/><br/><br/>
 
 <h3>📔 Latest Medium posts</h3>
